minder minder minder xmlrpc calls
git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWOProject/DWO-LMS/DWOJClient/trunk@19743 58dd2db4-0f11-0410-9df4-da15f00f50bd